All navigations added

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,30 @@
     <div id="app"></div>
     <script src="Data/home-data.js"></script>
     <!-- Videos section -->
-    <div id="videoSection" class="navigatable">
+    <div class="navigatable">
       <div class="n-row">
         <div id="diagnosis-category" class="n-col"></div>
       </div>
       <div class="n-row">
+        <div class="n-col">
+          <h1 class="n-item">hello boss</h1>
+        </div>
+      </div>
+      <div class="n-row">
+        <div class="n-col">
+          <div class="n-item">hello</div>
+        </div>
         <div id="diagnosis-videos" class="n-col"></div>
+      </div>
+    </div>
+    <div class="navigatable">
+      <div class="n-row" style="display: flex">
+        <div class="n-col" style="width: 50%">
+          <h1 class="n-item">hello boss col 1</h1>
+        </div>
+        <div class="n-col" style="width: 50%">
+          <h1 class="n-item">hello boss col 2</h1>
+        </div>
       </div>
     </div>
     <script src="video.js"></script>
