--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Empty project</title>
+    <title>Video Player POC Project</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
@@ -35,8 +36,26 @@
         </div>
       </div>
     </div>
+    <div id="video" style="position: absolute; width: 100vw; height: 100vh;display: none;">
+      <video class="video-js"
+      frameborder="0" allow=”fullscreen=*; autoplay=*; camera=*; microphone=*;" onended="closeVideoPlayer()"
+        id="my-video"
+        controls
+        preload="auto"
+        style="width: 100%; height: 100%;"
+      >
+        <source id="video-source" src="" type="video/mp4">
+      </video>
+    </div>
+    <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
     <script src="video.js"></script>
     <script src="video-page-remote-key-events.js"></script>
     <script async defer src="navigate.js"></script>
+
+    <script>
+      document.addEventListener("REMOTE_ACTION", (event)=> {
+        console.log(event);
+      });
+    </script>
   </body>
 </html>
